Fix width overflowing issues
- 100vw includes scrollbar width. 100% does not.

--- a/src/style.css
+++ b/src/style.css
@@ -50,8 +50,9 @@ button {
 /* Major sections */
 
 body {
+    position: relative;
     display: grid;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     grid-template-rows: var(--header-height) auto;
     font-size: var(--base-font-size);
@@ -92,6 +93,11 @@ nav>button:hover {
 #content {
     position: relative;
     background-color: var(--background-color);
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
 }
 
 /* top image (used in menu, contact) */
@@ -136,6 +142,11 @@ nav>button:hover {
 
 
 /* Home  */
+
+#content[data-tab="home"] {
+    height: calc(100vh - var(--header-height));
+}
+
 #content[data-tab="home"] img.background {
     height: calc(100vh - var(--header-height));
     width: 100%;
